--- a/form.html
+++ b/form.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Form Validation</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.19/dist/shoelace/shoelace.css">
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.19/dist/shoelace/shoelace.esm.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="container">
       <h1>Pre-paid Parking Form</h1>
       <form id="parking-form">
-        <div class="input-field" id="name-field">
+        <div class="input-field input-valid" id="name-field">
           <label for="name">Name</label>
           <input id="name" type="text">
         </div>
